--- a/selinux.yml
+++ b/selinux.yml
@@ -1,8 +1,8 @@
 ---
 - hosts: webservers
   become: true
-  become_method: sudo
-  become_user: automation
+#  become_method: sudo
+  remote_user: automation
   vars:
     selinux_policy: #targeted
     selinux_state: #enforcing
