--- a/selinux.yml
+++ b/selinux.yml
@@ -10,9 +10,8 @@
     #  - { name: 'samba_enable_home_dirs', state: 'on' }
     #  - { name: 'ssh_sysadm_login', state: 'on', persistent: 'yes' }
       - { name: 'httpd_can_network_connect', state: 'on', persistent: 'yes' }
-    selinux_fcontexts:
+    #selinux_fcontexts:
     #  - { target: '/tmp/test_dir(/.*)?', setype: 'user_home_dir_t', ftype: 'd' }
-      - { target: '', setype: '', ftype: 'd' }
     selinux_restore_dirs:
     #  - /tmp/test_dir
     selinux_ports:
