tasks:   - name: facts   #gather_facts: yes

--- a/PRACTICE/show-facts-10.yml
+++ b/PRACTICE/show-facts-10.yml
@@ -4,5 +4,5 @@
   remote_user: automation
   hosts: proxy
   tasks:
-    name: facts
-    gather_facts: yes
+    - name: facts
+    #gather_facts: yes
