--- a/PRACTICE/show-facts-10.yml
+++ b/PRACTICE/show-facts-10.yml
@@ -7,4 +7,4 @@
   tasks:
     - name: facts
       debug:
-        var: hostvars.'client1.ipa.vm'
+        var: hostvars[client1.ipa.vm][ansible_all_ipv4_addresses]
