--- a/PRACTICE/show-facts-10.yml
+++ b/PRACTICE/show-facts-10.yml
@@ -3,8 +3,8 @@
   become: yes
   remote_user: automation
   hosts: proxy
-  gather_facts: yes
+  gather_facts: no
   tasks:
     - name: facts
       debug:
-        msg: "{{ ansible_version }}"
+        msg: "{{ client1.ipa.vm[ansible_version] }}"
