msg: "{{ [client1.ipa.vm[ansible_python]] }}"

--- a/PRACTICE/show-facts-10.yml
+++ b/PRACTICE/show-facts-10.yml
@@ -7,4 +7,4 @@
   tasks:
     - name: facts
       debug:
-        msg: "{{ client1\.ipa\.vm[ansible_python] }}"
+        msg: "{{ [client1.ipa.vm[ansible_python]] }}"
