msg: "{{ [client1.ipa.vm[ansible_v me: facts variation bug: msg: "{{ [ansible_version] }}"

--- a/PRACTICE/show-facts-10.yml
+++ b/PRACTICE/show-facts-10.yml
@@ -8,3 +8,7 @@
     - name: facts
       debug:
         msg: "{{ [client1.ipa.vm[ansible_version]] }}"
+
+    - name: facts variation
+      debug:
+        msg: "{{ [ansible_version] }}"        
