sg: "{{ [client1.ipa.vm[ansible e: facts variation ug: sg: "{{ [ansible_version] }}" e: 10 facts variation ug: sg: "{{ [ansible_version.string

--- a/PRACTICE/show-facts-10.yml
+++ b/PRACTICE/show-facts-10.yml
@@ -12,3 +12,7 @@
     - name: facts variation
       debug:
         msg: "{{ [ansible_version] }}"        
+
+    - name: 10 facts variation
+      debug:
+        msg: "{{ [ansible_version.string] }}"                
