--- a/PRACTICE/show-facts-10.yml
+++ b/PRACTICE/show-facts-10.yml
@@ -15,4 +15,8 @@
 
     - name: 10 facts variation
       debug:
-        msg: "{{ [ansible_version.string] }}"                
+        msg: "{{ [ansible_version.string] }}"
+
+    - name: 20 facts variation
+      debug:
+        msg: "{{ [ansible_version[string]] }}"
