: "{{ [client1.ipa.vm[ansible_v  facts variation : : "{{ [ansible_version] }}"  10 facts variation : : "{{ [ansible_version.string]  20 facts variation : : "{{ [ansible_version][string]

--- a/PRACTICE/show-facts-10.yml
+++ b/PRACTICE/show-facts-10.yml
@@ -19,4 +19,4 @@
 
     - name: 20 facts variation
       debug:
-        msg: "{{ [ansible_version[string]] }}"
+        msg: "{{ [ansible_version][string] }}"
