g: "{{ [client1.ipa.vm] : 40 facts variation g: g: "{{ client1.ipa.vm }}

--- a/PRACTICE/show-facts-10.yml
+++ b/PRACTICE/show-facts-10.yml
@@ -24,3 +24,7 @@
     - name: 30 facts variation
       debug:
         msg: "{{ [client1.ipa.vm] }}" 
+
+    - name: 40 facts variation
+      debug:
+        msg: "{{ client1.ipa.vm }}"        
