msg: "{{ [ansible_facts][memory_mb] }}"

--- a/PRACTICE/show-facts-10.yml
+++ b/PRACTICE/show-facts-10.yml
@@ -35,4 +35,4 @@
 
     - name: display setup variables
       debug:
-        msg: "{{ memory_mb }}"        
+        msg: "{{ [ansible_facts][memory_mb] }}"        
