--- a/PRACTICE/show-facts-10.yml
+++ b/PRACTICE/show-facts-10.yml
@@ -29,10 +29,14 @@
   #WRONG    debug:
   #WRONG      msg: "{{ client1.ipa.vm }}"        
 
-    - name: checkout setup
-      setup:
-        filter: ansible_*_mb
+  #  - name: checkout setup
+  #    setup:
+  #      filter: ansible_*_mb
 
     - name: display setup variables
       debug:
-        msg: "{{ [ansible_facts.memory_mb] }}"        
+        msg: "{{ [ansible_facts.memory_mb] }}"
+
+    - name: 10 display setup variables
+      debug:
+        msg: "{{ ansible_facts.memory_mb }}"                
