loop: "{{ lookup('dict', absible_facts) }}"

--- a/PRACTICE/show-facts-10.yml
+++ b/PRACTICE/show-facts-10.yml
@@ -43,4 +43,5 @@
 
     - name: 20 display setup variables
       debug:
-        msg: "{{ ansible_facts }}"                        
+        msg: "User {{ item.key }} is {{ item.value.memtotal_mb }}"
+        loop: "{{ lookup('dict', absible_facts) }}"                       
