--- a/10_data_manipulation.yml
+++ b/10_data_manipulation.yml
@@ -5,7 +5,7 @@
   tasks:
     - name: Show extracted list of keys from a list of dictionaries
       ansible.builtin.debug:
-        msg: "{{ chains | map('extract', chains_config) | map(attribute='configs') | flatten | map(attribute='type') | flatten }}"
+        msg: "{{ chains | map('extract', chains_config) | map(attribute='configs') | flatten | map(attribute='type') }}"
       vars:
         chains: [1, 2]
         chains_config:
