routed on: 0.1  bridged on: 0.2  routedd on: 0.1  bridgedd

--- a/10_data_manipulation.yml
+++ b/10_data_manipulation.yml
@@ -16,6 +16,10 @@
                       version: 0.1
                     - type: bridged
                       version: 0.2
+                    - type: routedd
+                      version: 0.1
+                    - type: bridgedd
+                      version: 0.2                      
             2:
                 foo: baz
                 configs:
