--- a/10_data_manipulation.yml
+++ b/10_data_manipulation.yml
@@ -7,7 +7,7 @@
       ansible.builtin.debug:
         msg: "{{ chainss | map('extract', chains_config) | map(attribute='configs') | flatten | map(attribute='type') | flatten }}"
       vars:
-        chainss: [1, 2]
+        chainss: [1, 2, 3]
         chains_config:
             1:
                 foo: bar
@@ -27,3 +27,10 @@
                       version: 1.0
                     - type: bridged
                       version: 1.1
+            3:
+                foo: baz
+                configs:
+                    - type: routed
+                      version: 1.0
+                    - type: bridged
+                      version: 1.1                      
