gathering_facts: no

--- a/10_data_manipulation.yml
+++ b/10_data_manipulation.yml
@@ -2,6 +2,7 @@
   remote_user: automation
   become: yes
   hosts: proxy
+  gathering_facts: no
   tasks:
     - name: Show extracted list of keys from a list of dictionaries
       ansible.builtin.debug:
