--- a/10_data_manipulation.yml
+++ b/10_data_manipulation.yml
@@ -6,32 +6,32 @@
   tasks:
     - name: Show extracted list of keys from a list of dictionaries
       ansible.builtin.debug:
-        msg: "{{ chainss | map('extract', chains_configg) | map(attribute='configss') | flatten | map(attribute='type') | flatten }}"
+        msg: "{{ chainss | map('extract', chains_configg) | map(attribute='configss') | flatten | map(attribute='typee') | flatten }}"
       vars:
         chainss: [1, 2, 3]
         chains_configg:
             1:
                 foo: bar
                 configss:
-                    - type: routed
+                    - typee: routed
                       version: 0.1
-                    - type: bridged
+                    - typee: bridged
                       version: 0.2
-                    - type: routedd
+                    - typee: routedd
                       version: 0.1
-                    - type: bridgedd
+                    - typee: bridgedd
                       version: 0.2                      
             2:
                 foo: baz
                 configss:
-                    - type: routed
+                    - typee: routed
                       version: 1.0
-                    - type: bridged
+                    - typee: bridged
                       version: 1.1
             3:
                 foo: baz
                 configss:
-                    - type: routed
+                    - typee: routed
                       version: 1.0
-                    - type: bridged
+                    - typee: bridged
                       version: 1.1                      
