- name: Add home dirs to the backup spooler

--- a/10_data_manipulation.yml
+++ b/10_data_manipulation.yml
@@ -38,4 +38,11 @@
 
     - name: Retrieve the list of home directories
       ansible.builtin.command: ls /home
-      register: home_dirs                                        
+      register: home_dirs
+
+    - name: Add home dirs to the backup spooler
+      ansible.builtin.file:
+        path: /mnt/bkspool/{{ item }}
+        src: /home/{{ item }}
+        state: link
+      loop: "{{ home_dirs.stdout_lines }}"  
