--- a/20_data_manipulation.yml
+++ b/20_data_manipulation.yml
@@ -11,7 +11,8 @@
         chainss: [1, 2, 3]
         chains_configg:
             1:
-                #foo: bar
+                foo: bar
+                fooooo: bax
                 configss:
                     - typee: routed
                       version: 0.1
@@ -22,14 +23,14 @@
                     - typee: bridgedd
                       version: 0.2                      
             2:
-                #foo: baz
+                fooo: baz
                 configss:
                     - typee: routed
                       version: 1.0
                     - typee: bridged
                       version: 1.1
             3:
-                #foo: baz
+                foooo: baz
                 configss:
                     - typee: routed
                       version: 1.0
