foo: bar foo: bax

--- a/30_data_manipulation.yml
+++ b/30_data_manipulation.yml
@@ -8,11 +8,11 @@
       ansible.builtin.debug:
         msg: "{{ chainss | map('extract', chains_configg) | map(attribute='configss') | flatten | map(attribute='typee') | flatten }}"
       vars:
-        chainss: [A, 2]
+        chainss: [A, 2, 3]
         chains_configg:
             A:
                 foo: bar
-                fooooo: bax
+                foo: bax
                 configss:
                     - typee: routed
                       version: 0.1
