--- a/30_data_manipulation.yml
+++ b/30_data_manipulation.yml
@@ -36,3 +36,6 @@
                       version: 1.0
                     - typee: bridged
                       version: 1.1
+    - name: Try to print some variables
+      ansible.builtin.debug:
+        msg: "{{ chainss }}"             
