--- a/30_data_manipulation.yml
+++ b/30_data_manipulation.yml
@@ -38,4 +38,4 @@
                       version: 1.1
     - name: Try to print some variables
       ansible.builtin.debug:
-        msg: "{{ chainss[A] }}"             
+        msg: "{{ chains_configg.A.configss }}"             
