msg: "{{ chainss | map('extr act', chains_configg) }}"

--- a/30_data_manipulation.yml
+++ b/30_data_manipulation.yml
@@ -6,9 +6,10 @@
   tasks:
     - name: Show extracted list of keys from a list of dictionaries
       ansible.builtin.debug:
-        msg: "{{ chainss | map('extract', chains_configg) | map(attribute='configss') | flatten | map(attribute='typee') | flatten }}"
+        #msg: "{{ chainss | map('extract', chains_configg) | map(attribute='configss') | flatten | map(attribute='typee') | flatten }}"
+        msg: "{{ chainss | map('extract', chains_configg) }}"
       vars:
-        chainss: [1, 2, 3]
+        chainss: [A, 2, 3]
         chains_configg:
             A:
                 foo: bar
