msg: "{{ chainss | map('extract', chains_configg) | map(attribute= 'configss') | flatten | map(attribute='typee') | flatten }}"

--- a/30_data_manipulation.yml
+++ b/30_data_manipulation.yml
@@ -7,7 +7,7 @@
     - name: Show extracted list of keys from a list of dictionaries
       ansible.builtin.debug:
         #msg: "{{ chainss | map('extract', chains_configg) | map(attribute='configss') | flatten | map(attribute='typee') | flatten }}"
-        msg: "{{ chainss | map(attribute='configss') | flatten | map(attribute='typee') | flatten }}"
+        msg: "{{ chainss | map('extract', chains_configg) | map(attribute='configss') | flatten | map(attribute='typee') | flatten }}"
       vars:
         chainss: [A, 2, 3]
         chains_configg:
