gather_facts: yes

--- a/sysctl.yml
+++ b/sysctl.yml
@@ -1,7 +1,7 @@
 ---
 - name: Use Conditionals to Control Play Execution
   hosts: proxy
-  gather_facts: no
+  gather_facts: yes
   become: yes
   remote_user: automation
   tasks:
