--- a/PRACTICE/show-facts-10.yml
+++ b/PRACTICE/show-facts-10.yml
@@ -39,7 +39,7 @@
 
     - name: 10 display setup variables
       debug:
-        msg: "{{ hostvars[client1.ipa.vm][ansible_facts][memory_mb][real][total] }}"
+        msg: "{{ hostvars[inventory_hostname][ansible_facts][memory_mb][real][total] }}"
 
     - name: Display all variables/facts known for a host
       debug:
