--- a/PRACTICE/show-facts-10.yml
+++ b/PRACTICE/show-facts-10.yml
@@ -23,7 +23,7 @@
 
     - name: 30 facts variation
       debug:
-        msg: "{{ [client1.ipa.vm] }}" 
+        msg: "{{ [inventory_hostname] }}" 
 
   #WRONG  - name: 40 facts variation
   #WRONG    debug:
