--- a/PRACTICE/show-facts-10.yml
+++ b/PRACTICE/show-facts-10.yml
@@ -5,9 +5,9 @@
   hosts: proxy
   gather_facts: yes
   tasks:
-    - name: custom fact
-      setup:
-        filter: ansible_local
+  #  - name: custom fact
+  #    setup:
+  #      filter: ansible_local
   
     - name: facts
       debug:
