--- a/PRACTICE/show-facts-10.yml
+++ b/PRACTICE/show-facts-10.yml
@@ -47,7 +47,7 @@
 
     - name: Display all variables/facts known for a host
       debug:
-        var: hostvars[inventory_hostname]
+        var: hostvars['inventory_hostname']
         verbosity: 4
 
   #  - name: 20 display setup variables
