--- a/PRACTICE/show-facts-10.yml
+++ b/PRACTICE/show-facts-10.yml
@@ -9,9 +9,9 @@
   #    setup:
   #      filter: ansible_local
   
-    - name: facts
-      debug:
-        msg: "{{ ansible_local['custom']['date'] }}"
+  #  - name: facts
+  #    debug:
+  #      msg: "{{ ansible_local['custom']['date'] }}"
 
     - name: facts variation
       debug:
