msg: "{{ ansible_local['custom']['sample-exam'] }}"

--- a/PRACTICE/show-facts-10.yml
+++ b/PRACTICE/show-facts-10.yml
@@ -11,7 +11,7 @@
 
     - name: facts
       debug:
-        msg: "{{ ansible_local['custom']['date'] }}"
+        msg: "{{ ansible_local['custom']['sample-exam'] }}"
 
     - name: facts variation
       debug:
