var: hostvars['host']['inventory_hostname']

--- a/PRACTICE/show-facts-10.yml
+++ b/PRACTICE/show-facts-10.yml
@@ -47,7 +47,7 @@
 
     - name: Display all variables/facts known for a host
       debug:
-        var: hostvars[host]['inventory_hostname']
+        var: hostvars['host']['inventory_hostname']
         verbosity: 1
 
   #  - name: 20 display setup variables
