- name: show vars in role/show-facts-10/vars

--- a/roles/show-facts-10/tasks/main.yml
+++ b/roles/show-facts-10/tasks/main.yml
@@ -48,3 +48,7 @@
   #      msg: "User"
   #    loop: "{{ lookup('dict', ansible_facts) }}"
   #    when: "'memtotal_mb' in item.key"
+
+    - name: show vars in role/show-facts-10/vars
+      debug:
+        vars: single_list  
