--- a/roles/show-facts-10/tasks/main.yml
+++ b/roles/show-facts-10/tasks/main.yml
@@ -52,4 +52,4 @@
     - name: show vars in role/show-facts-10/vars
       debug:
         #var: single_list
-        msg: mydict: "{{ dict(single_list) | slice(2) | list }}" 
+        msg: "{{ dict(single_list) | slice(2) | list }}" 
