--- a/roles/show-facts-10/tasks/main.yml
+++ b/roles/show-facts-10/tasks/main.yml
@@ -51,5 +51,4 @@
 
     - name: show vars in role/show-facts-10/vars
       debug:
-        #var: single_list
-        msg: "{{ dict(single_list) | slice(2) | list }}" 
+        var: mydict
