--- a/roles/show-facts-10/vars/main.yml
+++ b/roles/show-facts-10/vars/main.yml
@@ -1,4 +1,6 @@
 ---
-     single_list: [ 'a', 'b', 'c', 'd' ]
-#     mydict: "{{ dict(single_list) | slice(2) | list }}"
-     mydict: "{{ dict(single_list) | list }}"
+   list_of_pairs: [ ['a', 'b'], ['c', 'd'] ]
+   mydict: "{{ dict(list_of_pairs) }}"
+   single_list: [ 'a', 'b', 'c', 'd' ]
+#    mydict: "{{ dict(single_list) | slice(2) | list }}"
+   mydict: "{{ dict(single_list) | list }}"
