--- a/roles/30_data_manipulation/vars/main.yml
+++ b/roles/30_data_manipulation/vars/main.yml
@@ -1,30 +1,37 @@
 ---
-    chainss: [A, 2, 3]
-    chains_configg:
-        A:
-            foo: bar
-            foo: bax
-            configss:
-                - typee: routed
-                  version: 0.1
-                - typee: bridged
-                  version: 0.2
-                - typee: routedd
-                  version: 0.1
-                - typee: bridgedd
-                  version: 0.2   
-        2:
-            fooo: baz
-            configss:
-                - typee: routed
-                  version: 1.0
-                - typee: bridged
-                  version: 1.1
-        3:
-            foooo: baz
-            configss:
-                - typee: routed
-                  version: 1.0
-                - typee: bridged
-                  version: 1.1
+   chainss: [A, 2, 3]
+   chains_configg:
+       A:
+           foo: bar
+           foo: bax
+           configss:
+               - typee: routed
+                 version: 0.1
+               - typee: bridged
+                 version: 0.2
+               - typee: routedd
+                 version: 0.1
+               - typee: bridgedd
+                 version: 0.2   
+       2:
+           fooo: baz
+           configss:
+               - typee: routed
+                 version: 1.0
+               - typee: bridged
+                 version: 1.1
+       3:
+           foooo: baz
+           configss:
+               - typee: routed
+                 version: 1.0
+               - typee: bridged
+                 version: 1.1
+
+
+   list_of_pairs: [ ['a', 'b'], ['c', 'd'] ]
+   mydict: "{{ dict(list_of_pairs) }}"
+#   single_list: [ 'a', 'b', 'c', 'd' ]
+#    mydict: "{{ dict(single_list) | slice(2) | list }}"
+#   mydict: "{{ dict(single_list) | list }}"        
             
