--- a/roles/30_data_manipulation/vars/main.yml
+++ b/roles/30_data_manipulation/vars/main.yml
@@ -30,7 +30,7 @@
 
 
    list_of_pairs: [ ['a', 'b'], ['c', 'd'] ]
-   mydict: "{{ dict(list_of_pairs) | list }}"
+   mydict: "{{ dict(list_of_pairs) }}"
 #   single_list: [ 'a', 'b', 'c', 'd' ]
 #    mydict: "{{ dict(single_list) | slice(2) | list }}"
 #   mydict: "{{ dict(single_list) | list }}"        
