--- a/roles/30_data_manipulation/tasks/main.yml
+++ b/roles/30_data_manipulation/tasks/main.yml
@@ -6,7 +6,7 @@
 
 - name: show vars in role/30_data_manipulation/vars
   debug:
-    var: mydict
+    var: mydict_1
 
 - name: Show extracted list of keys from a list of dictionaries
   ansible.builtin.debug:
