myvarnames: "{{ q('xvarnames', '^my') }}"

--- a/roles/30_data_manipulation/vars/main.yml
+++ b/roles/30_data_manipulation/vars/main.yml
@@ -8,7 +8,7 @@
      - b
      - c
 
-   myvarnames: "{{ q('varnames', '^my') }}"
+   myvarnames: "{{ q('xvarnames', '^my') }}"
 
    chainss: [A, 2, 3]
    chains_configg:
