--- a/roles/30_data_manipulation/tasks/main.yml
+++ b/roles/30_data_manipulation/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Using ‘vars’ to define dictionary from a set of lists without needing a task
   debug:
-    var: myothervarnames
+    var: myvarnames
 
 - name: Uses 'combine' to update the dictionary and 'zip' to make pairs of both lists
   ansible.builtin.set_fact:
