uptime_of_host_most_recently_rebooted

--- a/roles/30_data_manipulation/vars/main.yml
+++ b/roles/30_data_manipulation/vars/main.yml
@@ -11,6 +11,8 @@
    myvarnames: "{{ q('varnames', '^my') }}"
    mydict_2: "{{ dict(myothervarnames | zip(q('vars', *myvarnames))) }}"
 
+   uptime_of_host_most_recently_rebooted: "{{ansible_play_hosts_all | map('extract', hostvars, 'ansible_uptime_seconds') | sort | first}}"
+
    chainss: [A, 2, 3]
    chains_configg:
        A:
