when: database in "{{ group_names }}"

--- a/packages.yml
+++ b/packages.yml
@@ -18,4 +18,4 @@
       - lsof
       - mailx  
     state: latest
-    when: 'database' in "{{ 'group_names' }}"
+    when: database in "{{ group_names }}"
