--- a/packages.yml
+++ b/packages.yml
@@ -18,4 +18,4 @@
           - lsof
           - mailx  
         state: latest
-      when: 'database' is == "{{ group_names }}"
+      when: database is == "{{ group_names }}"
