--- a/ls-file-on-remote-system.yml
+++ b/ls-file-on-remote-system.yml
@@ -7,3 +7,4 @@
     - name: use shell module to execute ls command
       shell:
         cmd: ls -Zal /etc/systemd/system/default.target
+      register: ls-result  
