--- a/ls-file-on-remote-system.yml
+++ b/ls-file-on-remote-system.yml
@@ -7,4 +7,8 @@
     - name: use shell module to execute ls command
       shell:
         cmd: ls -Zal /etc/systemd/system/default.target
-      register: ls_result  
+      register: ls_result
+
+    - name: show ls_result
+      debug:
+        msg: "{{ ls_result }}"  
