--- a/server_list.yml
+++ b/server_list.yml
@@ -5,5 +5,6 @@
   remote_user: automation
   tasks:
     - name: print ansible_play_hosts
-      debug:
-        msg: "{{ ansible_play_hosts }}"
+      template:
+        src:
+        dest:
