--- a/server_list.yml
+++ b/server_list.yml
@@ -6,5 +6,5 @@
   tasks:
     - name: print ansible_play_hosts
       template:
-        src:
-        dest:
+        src: server_list_template.j2
+        dest: /etc/server_list.txt
