- name: print hostvars       debug:         msg: "{{ hostvars }}"

--- a/server_list.yml
+++ b/server_list.yml
@@ -8,3 +8,7 @@
       template:
         src: server_list_template.j2
         dest: /etc/server_list.txt
+
+    - name: print hostvars
+      debug:
+        msg: "{{ hostvars }}"    
