update_password: on_create

--- a/inner-users-database-webservers-sshkey.yml
+++ b/inner-users-database-webservers-sshkey.yml
@@ -5,6 +5,7 @@
         groups: "wheel"
         shell: "/bin/bash"
         password: "{{user_password | password_hash('sha512') }}"
+        update_password: on_create
 
     - name: Set authorized key taken from file
       authorized_key:
