--- a/server_list.yml
+++ b/server_list.yml
@@ -1,6 +1,6 @@
 ---
 - name: Create and Use Templates to Create Customised Configuration Files
-  hosts: proxy:webservers:database:
+  hosts: proxy:webservers:database
   become: yes
   remote_user: automation
   tasks:
